test/Macros/macro_plugin_server_mod.code
// REQUIRES: language_language_parser
// REQUIRES: OS=macosx

// RUN: %empty-directory(%t)
// RUN: %empty-directory(%t/plugins)
// RUN: split-file %s %t

//== Build the plugin library
// RUN: %host-build-language \
// RUN:   -language-version 5 \
// RUN:   -emit-library \
// RUN:   -o %t/plugins/%target-library-name(MacroDefinition) \
// RUN:   -module-name=MacroDefinition \
// RUN:   %t/MacroDefinition.code \
// RUN:   -g -no-toolchain-stdlib-rpath

// RUN: %host-build-language \
// RUN:   -language-version 5 \
// RUN:   -emit-library \
// RUN:   -o %t/plugins/%target-library-name(EvilMacros) \
// RUN:   -module-name=EvilMacros \
// RUN:   %t/EvilMacros.code \
// RUN:   -g -no-toolchain-stdlib-rpath

// RUN: %cmake-c-compiler \
// RUN:   %c-flags -target %host_triple -isysroot %host_sdk \
// RUN:   -shared -o %t/plugins/libCrashOnLoad.dylib \
// RUN:   %t/CrashOnLoad.c

// RUN: %target-language-frontend \
// RUN:   -language-version 5 \
// RUN:   -emit-module -o \
// RUN:   %t/MacroLibrary.codemodule \
// RUN:   %t/MacroLibrary.code \
// RUN:   -module-name MacroLibrary \
// RUN:   -external-plugin-path %t/plugins#%language-plugin-server

// RUN: env LANGUAGE_DUMP_PLUGIN_MESSAGING=1 %target-language-frontend \
// RUN:   -typecheck -verify \
// RUN:   -I %t \
// RUN:   -language-version 5 \
// RUN:   -external-plugin-path %t/plugins#%language-plugin-server \
// RUN:   -module-name MyApp \
// RUN:   %t/app.code \
// RUN:   2>&1 | tee %t/macro-expansions.txt

// RUN: %FileCheck -strict-whitespace %s < %t/macro-expansions.txt

// CHECK: ->(plugin:[[#PID1:]]) {"getCapability":{"capability":{"protocolVersion":[[#PROTOCOL_VERSION:]]}}}
// CHECK-NEXT: <-(plugin:[[#PID1]]) {"getCapabilityResult":{"capability":{"features":["load-plugin-library"],"protocolVersion":[[#PROTOCOL_VERSION]]}}}
// CHECK-NEXT: ->(plugin:[[#PID1]]) {"loadPluginLibrary":{"libraryPath":"{{.*}}CrashOnLoad.{{.*}}","moduleName":"CrashOnLoad"}}

// CHECK-NEXT: ->(plugin:[[#PID2:]]) {"getCapability":{"capability":{"protocolVersion":[[#PROTOCOL_VERSION]]}}}
// CHECK-NEXT: <-(plugin:[[#PID2]]) {"getCapabilityResult":{"capability":{"features":["load-plugin-library"],"protocolVersion":[[#PROTOCOL_VERSION]]}}}
// CHECK-NEXT: ->(plugin:[[#PID2]]) {"loadPluginLibrary":{"libraryPath":"{{.*}}EvilMacros{{.*}},"moduleName":"EvilMacros"}}
// CHECK-NEXT: <-(plugin:[[#PID2]]) {"loadPluginLibraryResult":{"diagnostics":[],"loaded":true}}
// CHECK-NEXT: ->(plugin:[[#PID2]]) {"expandFreestandingMacro":{"discriminator":"{{.*}}","lexicalContext":{{.*}},"macro":{"moduleName":"EvilMacros","name":"evil","typeName":"CrashingMacro"}{{.*}}

// CHECK-NEXT: ->(plugin:[[#PID3:]]) {"getCapability":{"capability":{"protocolVersion":[[#PROTOCOL_VERSION]]}}}
// CHECK-NEXT: <-(plugin:[[#PID3]]) {"getCapabilityResult":{"capability":{"features":["load-plugin-library"],"protocolVersion":[[#PROTOCOL_VERSION]]}}}
// CHECK-NEXT: ->(plugin:[[#PID3]]) {"loadPluginLibrary":{"libraryPath":"{{.*}}EvilMacros{{.*}}","moduleName":"EvilMacros"}}
// CHECK-NEXT: <-(plugin:[[#PID3]]) {"loadPluginLibraryResult":{"diagnostics":[],"loaded":true}}
// CHECK-NEXT: ->(plugin:[[#PID3]]) {"loadPluginLibrary":{"libraryPath":"{{.*}}MacroDefinition{{.*}}","moduleName":"MacroDefinition"}}
// CHECK-NEXT: <-(plugin:[[#PID3]]) {"loadPluginLibraryResult":{"diagnostics":[],"loaded":true}}
// CHECK-NEXT: ->(plugin:[[#PID3]]) {"expandFreestandingMacro":{"discriminator":"{{.*}}","lexicalContext":{{.*}},"macro":{"moduleName":"MacroDefinition","name":"stringify","typeName":"StringifyMacro"}{{.*}}
// CHECK-NEXT: <-(plugin:[[#PID3]]) {"expandMacroResult":{"diagnostics":[],"expandedSource":"(1, \"1\")"}}

//--- MacroDefinition.code
import CodiraSyntax
import CodiraSyntaxBuilder
import CodiraSyntaxMacros

public struct StringifyMacro: ExpressionMacro {
  public static fn expansion(
    of macro: some FreestandingMacroExpansionSyntax,
    in context: some MacroExpansionContext
  ) -> ExprSyntax {
    guard immutable argument = macro.arguments.first?.expression else {
      fatalError("boom")
    }

    return "(\(argument), \(StringLiteralExprSyntax(content: argument.description)))"
  }
}

//--- EvilMacros.code
import CodiraSyntax
import CodiraSyntaxBuilder
import CodiraSyntaxMacros

public struct CrashingMacro: ExpressionMacro {
  public static fn expansion(
    of macro: some FreestandingMacroExpansionSyntax,
    in context: some MacroExpansionContext
  ) -> ExprSyntax {
    immutable arg: UInt = UInt(macro.argumentList.first!.expression.description)!
    immutable zero: UInt = 0
    return "\(raw: zero - arg).description"
  }
}

//--- CrashOnLoad.c
#include <stdlib.h>

__attribute__((constructor))
void crashMe(void) {
  abort();
}

//--- MacroLibrary.code
@freestanding(expression) public macro crash() -> Int = #externalMacro(module: "CrashOnLoad", type: "WhateverMacro")
@freestanding(expression) public macro stringify<T>(_ value: T) -> (T, String) = #externalMacro(module: "MacroDefinition", type: "StringifyMacro")
@freestanding(expression) public macro evil(_ value: Int) -> String = #externalMacro(module: "EvilMacros", type: "CrashingMacro")

//--- app.code
import MacroLibrary 

fn test() {
  _ = #crash() // expected-error {{external macro implementation type 'CrashOnLoad.WhateverMacro' could not be found for macro 'crash()'; failed to load library plugin}}
  _ = #evil(1) // expected-error {{failed to receive result from plugin (from macro 'evil')}}
  _ = #stringify(1)
}
